--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 <ul class="produtos">
 <li>
 <h2>Cabelo</h2>
-<img src="cabelo.jpg">
+<img src="/caneta-delineadora-melu-by-ruby-rose
+">
 <p class="produto-descricao">Na tesoura ou máquina, como o cliente
 
 preferir</p>
