--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Produtos - Barbearia Alura</title>
+<title>Produtos -CuteMakes</title>
 <link rel="stylesheet" href="reset.css">
 <link rel="stylesheet" href="produtos.css">
 </head>
@@ -22,7 +22,7 @@
 <main>
 <ul class="produtos">
 <li>
-<h2>Cabelo</h2>
+
 <img src="/caneta-delineadora-melu-by-ruby-rose
 ">
 <p class="produto-descricao">Na tesoura ou máquina, como o cliente
@@ -34,12 +34,11 @@ preferir</p>
 <li>
 <h2>Barba</h2>
 <img src="barba.jpg">
-<p class="produto-descricao">Corte e desenho profissional de barba</p>
+<p class="produto-descricao">maquiagens profissionais</p>
 <p class="produto-preco">R$ 18,00</p>
 </li>
 <li>
-<h2>Cabelo + Barba</h2>
-<img src="cabelo+barba.jpg">
+<img src=
 <p class="produto-descricao">Pacote completo de cabelo e barba</p>
 <p class="produto-preco">R$ 35,00</p>
 </li>
