--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <img src="/caneta-delineadora-melu-by-ruby-rose
 ">
-<p class="produto-descricao">Na tesoura ou máquina, como o cliente
+<p class="produto-descricao">maquiagens
 
 preferir</p>
 
@@ -33,17 +33,17 @@ preferir</p>
 </li>
 <li>
 <h2>Barba</h2>
-<img src="barba.jpg">
+<img src=".jpg">
 <p class="produto-descricao">maquiagens profissionais</p>
 <p class="produto-preco">R$ 18,00</p>
 </li>
 <li>
 <img src=
-<p class="produto-descricao">Pacote completo de cabelo e barba</p>
+<p class="produto-descricao">kit completo de maquiagem</p>
 <p class="produto-preco">R$ 35,00</p>
 </li>
 </ul>
 </main>
 <footer>
 <img src="logo-branco.png">
-<p class="copyright">&copy; Copyright Barbearia Alura - 2019</p>
+<p class="copyright">&copy; Copyright CuteMakes - 2023</p>
