--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ preferir</p>
 </li>
 <li>
 <h2>Barba</h2>
-<img src=".jpg">
+<img src="corretivo_liquido_melu_ruby_rose.jpg">
 <p class="produto-descricao">maquiagens profissionais</p>
 <p class="produto-preco">R$ 18,00</p>
 </li>
