--- a/contato.html
+++ b/contato.html
@@ -2,7 +2,7 @@
 <html>
       <head>
              <meta  charset="UTF-8"
-        <litle>Contato - Barbearia Alura</title>
+        <litle>Contato - CuteMakes</title>
 
         <link rel="stylesheet" href="reset.css">
         <link rel="stylesheet" href="style.css">
@@ -14,3 +14,8 @@
                     <h1<img src="logo.png"></h1>
                         <nav>
       <ul>                   
+                                       <li><a href="index.html">Home</a></li>
+                                       <li>="produtos.html">Produtos</a></li>
+                                       <li>="contato.html">Contato</a></li>
+                  </ul>      
+    </nav>
