--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>Produtos -CuteMakes</title>
 <link rel="stylesheet" href="reset.css">
-<link rel="stylesheet" href="produtos.css">
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 <header>
@@ -39,7 +39,7 @@ preferir</p>
 <li>
 <img src=
 <p class="produto-descricao">kit completo de maquiagem</p>
-<p class="produto-preco">R$ 35,00</p>
+<p class="produto-preco">R$ 80,00</p>
 </li>
 </ul>
 </main>
