--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <li>
 
   <img src="/caneta-delineadora-melu-by-ruby-rose
-  <img src="corretivo_liquido_melu_ruby_rose.jpg">
+  <img src="D_NQ_NP_928341-MLB44446613896_122020-O.png">
 ">
 <p class="produto-descricao">maquiagens
 
