--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Produtos -CuteMakes</title>
+<title>Produtos - Barbearia Alura</title>
 <link rel="stylesheet" href="reset.css">
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="produtos.css">
 </head>
 <body>
 <header>
 <div class="caixa">
-<h1><img src="download.jpeg"></h1>
+<h1><img src="logo.png"></h1>
 <nav>
 <ul>
 <li><a href="index.html">Home</a></li>
@@ -22,27 +22,31 @@
 <main>
 <ul class="produtos">
 <li>
-
-  <img src="/caneta-delineadora-melu-by-ruby-rose
-  <img src=<"D_NQ_NP_928341-MLB44446613896_122020-O.png">
-">
-<p class="produto-descricao">maquiagens
+<h2>Cabelo</h2>
+<img src="cabelo.jpg">
+<p class="produto-descricao">Na tesoura ou máquina, como o cliente
 
 preferir</p>
 
-<p class="produto-preco">R$ 50,00</p>
+<p class="produto-preco">R$ 25,00</p>
 </li>
 <li>
-<p class="produto-descricao">maquiagens profissionais</p>
-<p class="produto-preco">R$ 99,90</p>
+<h2>Barba</h2>
+<img src="barba.jpg">
+<p class="produto-descricao">Corte e desenho profissional de barba</p>
+<p class="produto-preco">R$ 18,00</p>
 </li>
 <li>
-<img src=
-<p class="produto-descricao">kit completo de maquiagem</p>
-<p class="produto-preco">R$ 199,99</p>
+<h2>Cabelo + Barba</h2>
+<img src="cabelo+barba.jpg">
+<p class="produto-descricao">Pacote completo de cabelo e barba</p>
+<p class="produto-preco">R$ 35,00</p>
 </li>
 </ul>
 </main>
 <footer>
 <img src="logo-branco.png">
-<p class="copyright">&copy; Copyright CuteMakes - 2023</p>
+<p class="copyright">&copy; Copyright Barbearia Alura - 2019</p>
+</footer>
+</body>
+</html>
