--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <meta charset="UTF-8">
 <title>Produtos - Barbearia Alura</title>
 <link rel="stylesheet" href="reset.css">
-<link rel="stylesheet" href="produtos.css">
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 <header>
 <div class="caixa">
-<h1><img src="logo.png"></h1>
+<h1><img src="download.jpeg"></h1>
 <nav>
 <ul>
 <li><a href="index.html">Home</a></li>
