--- a/index.html
+++ b/index.html
@@ -22,13 +22,12 @@
 <main>
 <ul class="produtos">
 <li>
-<h2>Cabelo</h2>
-<img src=".jpg">
-<p class="produto-descricao">Na tesoura ou máquina, como o cliente
-
+<h2>kit maquiagem</h2>
+<img src="D_NQ_NP_928341-MLB44446613896_122020-O.png.jpg">
+<p class="produto-descricao">kit maquiagem completa
 preferir</p>
 
-<p class="produto-preco">R$ 25,00</p>
+<p class="produto-preco">R$ 89,90</p>
 </li>
 <li>
 <h2>Barba</h2>
