--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 <ul class="produtos">
 <li>
 <h2>kit maquiagem</h2>
-<img src="D_NQ_NP_928341-MLB44446613896_122020-O.png.jpg">
+<img src="D_NQ_NP_928341-MLB44446613896_122020-O.jpg">
 <p class="produto-descricao">kit maquiagem completa
-preferir</p>
+</p>
 
 <p class="produto-preco">R$ 89,90</p>
 </li>
