--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <li>
 <h2>kit maquiagem</h2>
 <img src="">
-<p class="produto-descricao">kit maquiagem completa
+<p class="produto-descricao">gloss com cor sheglam
 </p>
 
 <p class="produto-preco">R$ 89,90</p>
