--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <ul class="produtos">
 <li>
 <h2>kit maquiagem</h2>
-<img src="">
+<img src="$_1.png">
 <p class="produto-descricao">gloss com cor sheglam
 </p>
 
