--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
 <main>
 <ul class="produtos">
 <li>
-<h2>kit maquiagem</h2>
-<img src="$_1.png">
-<p class="produto-descricao">gloss com cor sheglam
+<h2>Paleta</h2>
+<img src="2.png">
+<p class="produto-descricao">paleta frida kahlo
 </p>
 
-<p class="produto-preco">R$ 89,90</p>
+<p class="produto-preco">R$ 29,90</p>
 </li>
 <li>
 <h2>Barba</h2>
